==> tanchgen/bluenrg.2/bluenrg/src/stm32_bluenrg_ble.c <==
#include <stddef.h>
#include "stm32f0xx.h"
#include "stm32_bluenrg_ble.h"
#include "my_time.h"
#include "gp_timer.h"
#include "my_error.h"
#include "my_main.h"
#include "my_service.h"
#define HEADER_SIZE 5
#define MAX_BUFFER_SIZE 255
#define TIMEOUT_DURATION 15

void BNRG_SPI_Init(void)
{
	SPI_InitTypeDef SPI_InitStruct;
	// --------------- Set SPI init structure parameters values -----------------
	  /* Initialize the SPI_Direction member */
	  SPI_InitStruct.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	  /* Initialize the SPI_Mode member */
	  SPI_InitStruct.SPI_Mode = SPI_Mode_Master;
	  /* Initialize the SPI_DataSize member */
	  SPI_InitStruct.SPI_DataSize = SPI_DataSize_8b;
	  /* Initialize the SPI_CPOL member */
	  SPI_InitStruct.SPI_CPOL = SPI_CPOL_Low;
	  /* Initialize the SPI_CPHA member */
	  SPI_InitStruct.SPI_CPHA = SPI_CPHA_1Edge;
	  /* Initialize the SPI_NSS member */
	  SPI_InitStruct.SPI_NSS = SPI_NSS_Soft;
	  /* Initialize the SPI_BaudRatePrescaler member */
	  SPI_InitStruct.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4;
	  /* Initialize the SPI_FirstBit member */
	  SPI_InitStruct.SPI_FirstBit = SPI_FirstBit_MSB;
	  /* Initialize the SPI_CRCPolynomial member */
	  SPI_InitStruct.SPI_CRCPolynomial = 7;

	  SpiMspInit( BNRG_SPI );
	  SPI_Init( BNRG_SPI, &SPI_InitStruct );

	  SPI_TIModeCmd( BNRG_SPI, DISABLE );
	  SPI_CalculateCRC( BNRG_SPI, DISABLE );
// Configures the FIFO reception threshold for the selected SPI.
	  /* Clear FRXTH bit */
	  BNRG_SPI->CR2 &= (uint16_t)~((uint16_t)SPI_CR2_FRXTH);
	  /* Set new FRXTH bit value */
	  BNRG_SPI->CR2 |= SPI_CR2_FRXTH;

	  SPI_Cmd( BNRG_SPI, ENABLE );
}

void BlueNRG_RST(void)
{
  BNRG_SPI_RESET_PORT->BRR |= BNRG_SPI_RESET_PIN;
  myDelay(5);
  BNRG_SPI_RESET_PORT->BSRR |= BNRG_SPI_RESET_PIN;
  myDelay(5);
}

uint8_t BlueNRG_DataPresent(void)
{
  if ( (BNRG_SPI_EXTI_PORT->IDR & BNRG_SPI_EXTI_PIN) == BNRG_SPI_EXTI_PIN )
      return TRUE;
  else  
      return FALSE;
}

int32_t BlueNRG_SPI_Read_All(SPI_TypeDef *hspi, uint8_t *buffer,
                             uint8_t buff_size)
{
  uint16_t byte_count;
  uint8_t len = 0;
  uint8_t char_ff = 0xff;
  volatile uint8_t read_char;


  uint8_t header_master[HEADER_SIZE] = {0x0b, 0x00, 0x00, 0x00, 0x00};
  uint8_t header_slave[HEADER_SIZE];

  /* CS reset */
  BNRG_SPI_CS_PORT->BRR |= BNRG_SPI_CS_PIN;

  /* Read the header */  
  SPI_TransmitReceive(hspi, header_master, header_slave, HEADER_SIZE, TIMEOUT_DURATION);
  
  if (header_slave[0] == 0x02) {
    /* device is ready */
    byte_count = (header_slave[4]<<8)|header_slave[3];
  
    if (byte_count > 0) {
  
      /* avoid to read more data that size of the buffer */
      if (byte_count > buff_size){
        byte_count = buff_size;
      }
  
      for (len = 0; len < byte_count; len++){
        SPI_TransmitReceive(hspi, &char_ff, (uint8_t*)&read_char, 1, TIMEOUT_DURATION);
        buffer[len] = read_char;
      }
    }    
  }
  /* Release CS line */
  BNRG_SPI_CS_PORT->BSRR |= BNRG_SPI_CS_PIN;
  
  // Add a small delay to give time to the BlueNRG to set the IRQ pin low
  // to avoid a useless SPI read at the end of the transaction
  for(volatile int i = 0; i < 2; i++)__NOP();
  
  return len;   
}

int32_t BlueNRG_SPI_Write(SPI_TypeDef *hspi, uint8_t* data1,
                          uint8_t* data2, uint8_t Nb_bytes1, uint8_t Nb_bytes2)
{  
  int32_t result = 0;
  
  int32_t spi_fix_enabled = 0;

#define ENABLE_SPI_FIX
  
#ifdef ENABLE_SPI_FIX
  spi_fix_enabled = 1;
#endif //ENABLE_SPI_FIX
  
  unsigned char header_master[HEADER_SIZE] = {0x0a, 0x00, 0x00, 0x00, 0x00};
  unsigned char header_slave[HEADER_SIZE]  = {0xaa, 0x00, 0x00, 0x00, 0x00};
  
  unsigned char read_char_buf[MAX_BUFFER_SIZE];

  Disable_SPI_IRQ(); 

  /*
   If the SPI_FIX is enabled the IRQ is set in Output mode, then it is pulled
   high and, after a delay of at least 112us, the CS line is asserted and the
   header transmit/receive operations are started.
   After these transmit/receive operations the IRQ is reset in input mode.
 */
  if (spi_fix_enabled) {
    set_irq_as_output();

    /* Assert CS line after at least 112us */
    us150Delay();
}

  /* CS reset */
  BNRG_SPI_CS_PORT->BRR |= BNRG_SPI_CS_PIN;

  /* Exchange header */  
  SPI_TransmitReceive(hspi, header_master, header_slave, HEADER_SIZE, TIMEOUT_DURATION);
  
  if (spi_fix_enabled) {
    set_irq_as_input();
}

  if (header_slave[0] == 0x02) {
    /* SPI is ready */
    if (header_slave[1] >= (Nb_bytes1+Nb_bytes2)) {
  
      /*  Buffer is big enough */
      if (Nb_bytes1 > 0) {
        SPI_TransmitReceive(hspi, data1, read_char_buf, Nb_bytes1, TIMEOUT_DURATION);
      }
      if (Nb_bytes2 > 0) {
        SPI_TransmitReceive(hspi, data2, read_char_buf, Nb_bytes2, TIMEOUT_DURATION);
}

    } else {
      /* Buffer is too small */
      result = -2;
      }
  } else {
    /* SPI is not ready */
    result = -1;
      }
    
    /* Release CS line */
  BNRG_SPI_CS_PORT->BSRR |= BNRG_SPI_CS_PIN;
    
  Enable_SPI_IRQ();
    
  return result;
}

void set_irq_as_output(void)
{
  GPIO_InitTypeDef  GPIO_InitStructure;
  
  /* Pull IRQ high */
  GPIO_InitStructure.GPIO_Pin = BNRG_SPI_IRQ_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_Level_1;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_Init(BNRG_SPI_IRQ_PORT, &GPIO_InitStructure);
  BNRG_SPI_IRQ_PORT->BSRR |= BNRG_SPI_IRQ_PIN;			// Added to avoid spurious interrupt from the BlueNRG

}

void set_irq_as_input(void)
{
  GPIO_InitTypeDef  GPIO_InitStructure;
  
  /* IRQ input */  
  GPIO_InitStructure.GPIO_Pin = BNRG_SPI_IRQ_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_DOWN;
  GPIO_Init(BNRG_SPI_IRQ_PORT, &GPIO_InitStructure);
  
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_Init(BNRG_SPI_IRQ_PORT, &GPIO_InitStructure);
}
